# ai-readiness-audit

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: check-builder.md  report-craftsman.md  scope-keeper.md  test-guardian.md
ai_audit/: __init__.py  cli.py  target.py
ai_audit/checks/: __init__.py  base.py  bot_access.py  freshness.py  js_dependency.py  llms_txt.py  semantic_html.py  structured_data.py
ai_audit/report/: __init__.py  json_writer.py  renderer.py
ai_audit/report/templates/: report.html.j2  report.md.j2  report_web.html.j2
docs/: SERVICE_SPEC.md  USER_GUIDE.md
tests/: conftest.py  test_bot_access.py  test_freshness.py  test_js_dependency.py  test_llms_txt.py  test_renderer.py  test_report.py  test_semantic_html.py  test_structured_data.py  test_target.py
tests/fixtures/: llms_invalid.txt  llms_valid.txt  page_basic.html  page_jsonld_article.html  page_jsonld_broken.html  page_jsonld_faqpage.html  page_jsonld_graph.html  page_jsonld_missing_props.html  page_jsonld_organization.html  page_spa_rendered.html  page_spa_shell.html  robots_block_gptbot.txt
