[project]
name = "ai-audit"
version = "0.1.0"
description = "WebサイトがAIクローラーにどれだけ読めるかを診断するCLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "playwright>=1.60.0",
    "selectolax>=0.4.10",
    "typer>=0.26.7",
]

[project.scripts]
ai-audit = "ai_audit.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "playwright: Playwright（ブラウザ）が必要なテスト。未導入環境ではスキップ",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_audit"]
